--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1>Privacy Policy</h1>
 
         <h2>1. General Information</h2>
-        <p>This privacy policy outlines how [App Name] handles your personal data when you use the app. We are committed to ensuring your privacy is protected.</p>
+        <p>This privacy policy outlines how Sticker Oluştur & Durum İndir handles your personal data when you use the app. We are committed to ensuring your privacy is protected.</p>
 
         <h2>2. Data Collection</h2>
         <p>The app does not collect any personal information from users. It only processes the images or videos you choose to use within the app. No other data is accessed or collected from your device.</p>
