--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Privacy Policy</title>
+    <title>Privacy Policy and Terms of Use</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,9 +13,12 @@
             background-color: #f9f9f9;
             color: #333;
         }
-        h1 {
+        h1, h2 {
             color: #4CAF50;
             text-align: center;
+        }
+        h2 {
+            margin-top: 30px;
         }
         .container {
             max-width: 800px;
@@ -25,11 +28,13 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        h2 {
-            color: #4CAF50;
-        }
         p {
             line-height: 1.6;
+            margin: 10px 0;
+        }
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
         }
         a {
             color: #4CAF50;
@@ -40,31 +45,69 @@
 <body>
 
     <div class="container">
-        <h1>Privacy Policy</h1>
+        <h1>Privacy Policy and Terms of Use</h1>
 
-        <h2>1. General Information</h2>
-        <p>This privacy policy outlines how Sticker Oluştur & Durum İndir handles your personal data when you use the app. We are committed to ensuring your privacy is protected.</p>
+        <h2>Privacy Policy</h2>
 
-        <h2>2. Data Collection</h2>
-        <p>The app does not collect any personal information from users. It only processes the images or videos you choose to use within the app. No other data is accessed or collected from your device.</p>
+        <h3>1. Acceptance of Terms</h3>
+        <p>By downloading and using this app, you agree to the terms outlined in this Privacy Policy. Please read carefully before continuing to use the app.</p>
 
-        <h2>3. Data Usage</h2>
-        <p>The app only processes the images or videos you specify for creating stickers or downloading statuses. All operations are performed locally on your device, and no data is sent to external servers.</p>
+        <h3>2. Data Collection</h3>
+        <p>The app does not collect personal information. It processes only the images and videos users specify for creating stickers or downloading statuses. No other data on your device is accessed.</p>
 
-        <h2>4. Advertisements</h2>
-        <p>The app may display ads at certain intervals. These ads require an internet connection to function, but no personal information is shared with advertisers.</p>
+        <h3>3. Data Usage</h3>
+        <p>All processing occurs locally on your device. Images, videos, or any content specified by the user are not sent to external servers or shared with third parties.</p>
 
-        <h2>5. User Rights</h2>
-        <p>You have full control over the data you provide through the app. You can uninstall the app at any time, which will remove all locally stored data.</p>
+        <h3>4. Advertisements</h3>
+        <p>The app displays ads at specific intervals, such as after creating stickers or downloading statuses. While ads require an internet connection, no personal data is shared with advertisers.</p>
 
-        <h2>6. Third-Party Links</h2>
-        <p>The app may contain links to third-party websites or services. We are not responsible for the privacy practices of those third-party sites.</p>
+        <h3>5. Prohibited Content</h3>
+        <p>The app prohibits the use of pornography, violence, illegal content, or any material infringing on personal rights. Please adhere to these guidelines while using the app.</p>
 
-        <h2>7. Changes to the Policy</h2>
-        <p>This privacy policy may be updated from time to time. Users will be notified of significant changes to the policy.</p>
+        <h3>6. User Rights</h3>
+        <p>Users have full control over the content they create and manage within the app. Uninstalling the app will delete all locally stored data.</p>
 
-        <h2>8. Contact Information</h2>
-        <p>If you have any questions about this privacy policy, please contact us at [email address].</p>
+        <h3>7. Third-Party Links</h3>
+        <p>The app may contain links to third-party websites or services. We are not responsible for the content or privacy practices of these external sites.</p>
+
+        <h3>8. Changes to Privacy Policy</h3>
+        <p>We reserve the right to update this Privacy Policy. Users will be informed of significant changes within the app.</p>
+
+        <h3>9. Contact Information</h3>
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us at [your email address].</p>
+
+        <h2>Terms of Use</h2>
+
+        <h3>1. Acceptance of Terms</h3>
+        <p>By downloading and using this app, you agree to comply with these Terms of Use. Please read them carefully.</p>
+
+        <h3>2. Usage License</h3>
+        <p>You are granted a limited, non-transferable, revocable license to use the app. All rights are reserved by the developer.</p>
+
+        <h3>3. Prohibited Actions</h3>
+        <p>The following activities are strictly prohibited:</p>
+        <ul>
+            <li>Using the app for commercial purposes without permission.</li>
+            <li>Reverse engineering the app's source code.</li>
+            <li>Uploading malicious software or viruses.</li>
+            <li>Disrupting the functionality of the app.</li>
+            <li>Uploading copyrighted or inappropriate content.</li>
+        </ul>
+
+        <h3>4. User Responsibilities</h3>
+        <p>Users are responsible for all content they create or upload within the app. Any violations of copyright, privacy, or other legal rights are the sole responsibility of the user.</p>
+
+        <h3>5. Content Moderation</h3>
+        <p>The app reserves the right to remove user-generated content at its discretion if it violates these terms.</p>
+
+        <h3>6. Liability Disclaimer</h3>
+        <p>The app and its developers are not responsible for any damages resulting from the use of the app or third-party services. Use at your own risk.</p>
+
+        <h3>7. Changes to Terms</h3>
+        <p>We reserve the right to modify these terms at any time. Changes will be communicated through the app.</p>
+
+        <h3>8. Contact Information</h3>
+        <p>If you have any questions about these Terms of Use, please contact us at [your email address].</p>
     </div>
 
 </body>
