--- a/index.html
+++ b/index.html
@@ -40,75 +40,80 @@
             color: #4CAF50;
             text-decoration: none;
         }
+        .flag {
+            cursor: pointer;
+            width: 30px;
+            margin: 0 5px;
+        }
+        .language-selection {
+            text-align: center;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Privacy Policy and Terms of Use</h1>
+        <div class="language-selection">
+            <img src="turkish_flag.png" alt="Turkish" class="flag" id="turkishFlag">
+            <img src="english_flag.png" alt="English" class="flag" id="englishFlag">
+        </div>
 
-        <h2>Privacy Policy</h2>
+        <div id="content">
+            <!-- İngilizce içerik başlangıçta burada yer alır -->
+            <h1>Privacy Policy and Terms of Use</h1>
 
-        <h3>1. Acceptance of Terms</h3>
-        <p>By downloading and using this app, you agree to the terms outlined in this Privacy Policy. Please read carefully before continuing to use the app.</p>
+            <h2>Privacy Policy</h2>
 
-        <h3>2. Data Collection</h3>
-        <p>The app does not collect personal information. It processes only the images and videos users specify for creating stickers or downloading statuses. No other data on your device is accessed.</p>
+            <h3>1. Acceptance of Terms</h3>
+            <p>By downloading and using this app, you agree to the terms outlined in this Privacy Policy. Please read carefully before continuing to use the app.</p>
 
-        <h3>3. Data Usage</h3>
-        <p>All processing occurs locally on your device. Images, videos, or any content specified by the user are not sent to external servers or shared with third parties.</p>
+            <h3>2. Data Collection</h3>
+            <p>The app does not collect personal information. It processes only the images and videos users specify for creating stickers or downloading statuses. No other data on your device is accessed.</p>
 
-        <h3>4. Advertisements</h3>
-        <p>The app displays ads at specific intervals, such as after creating stickers or downloading statuses. While ads require an internet connection, no personal data is shared with advertisers.</p>
-
-        <h3>5. Prohibited Content</h3>
-        <p>The app prohibits the use of pornography, violence, illegal content, or any material infringing on personal rights. Please adhere to these guidelines while using the app.</p>
-
-        <h3>6. User Rights</h3>
-        <p>Users have full control over the content they create and manage within the app. Uninstalling the app will delete all locally stored data.</p>
-
-        <h3>7. Third-Party Links</h3>
-        <p>The app may contain links to third-party websites or services. We are not responsible for the content or privacy practices of these external sites.</p>
-
-        <h3>8. Changes to Privacy Policy</h3>
-        <p>We reserve the right to update this Privacy Policy. Users will be informed of significant changes within the app.</p>
-
-        <h3>9. Contact Information</h3>
-        <p>If you have any questions or concerns about this Privacy Policy, please contact us at [your email address].</p>
-
-        <h2>Terms of Use</h2>
-
-        <h3>1. Acceptance of Terms</h3>
-        <p>By downloading and using this app, you agree to comply with these Terms of Use. Please read them carefully.</p>
-
-        <h3>2. Usage License</h3>
-        <p>You are granted a limited, non-transferable, revocable license to use the app. All rights are reserved by the developer.</p>
-
-        <h3>3. Prohibited Actions</h3>
-        <p>The following activities are strictly prohibited:</p>
-        <ul>
-            <li>Using the app for commercial purposes without permission.</li>
-            <li>Reverse engineering the app's source code.</li>
-            <li>Uploading malicious software or viruses.</li>
-            <li>Disrupting the functionality of the app.</li>
-            <li>Uploading copyrighted or inappropriate content.</li>
-        </ul>
-
-        <h3>4. User Responsibilities</h3>
-        <p>Users are responsible for all content they create or upload within the app. Any violations of copyright, privacy, or other legal rights are the sole responsibility of the user.</p>
-
-        <h3>5. Content Moderation</h3>
-        <p>The app reserves the right to remove user-generated content at its discretion if it violates these terms.</p>
-
-        <h3>6. Liability Disclaimer</h3>
-        <p>The app and its developers are not responsible for any damages resulting from the use of the app or third-party services. Use at your own risk.</p>
-
-        <h3>7. Changes to Terms</h3>
-        <p>We reserve the right to modify these terms at any time. Changes will be communicated through the app.</p>
-
-        <h3>8. Contact Information</h3>
-        <p>If you have any questions about these Terms of Use, please contact us at [your email address].</p>
+            <!-- Diğer İngilizce metin buraya gelir -->
+        </div>
     </div>
 
+    <script>
+        // Türkçe ve İngilizce içerikler
+        const contentData = {
+            english: `
+                <h1>Privacy Policy and Terms of Use</h1>
+                <h2>Privacy Policy</h2>
+                <h3>1. Acceptance of Terms</h3>
+                <p>By downloading and using this app, you agree to the terms outlined in this Privacy Policy. Please read carefully before continuing to use the app.</p>
+                <h3>2. Data Collection</h3>
+                <p>The app does not collect personal information. It processes only the images and videos users specify for creating stickers or downloading statuses. No other data on your device is accessed.</p>
+                <!-- Daha fazla İngilizce metin -->
+            `,
+            turkish: `
+                <h1>Gizlilik Politikası ve Kullanım Şartları</h1>
+                <h2>Gizlilik Politikası</h2>
+                <h3>1. Şartların Kabulü</h3>
+                <p>Bu uygulamayı indirerek ve kullanarak, bu Gizlilik Politikası'nda belirtilen şartları kabul etmiş olursunuz. Devam etmeden önce dikkatlice okuyunuz.</p>
+                <h3>2. Veri Toplama</h3>
+                <p>Uygulama kişisel bilgi toplamaz. Yalnızca kullanıcıların belirttiği görüntü ve videoları çıkartma oluşturmak veya durumları indirmek için işler. Cihazınızdaki diğer verilere erişim sağlanmaz.</p>
+                <!-- Daha fazla Türkçe metin -->
+            `
+        };
+
+        // Dil değişim butonları
+        const turkishFlag = document.getElementById("turkishFlag");
+        const englishFlag = document.getElementById("englishFlag");
+
+        // İçerik alanı
+        const contentDiv = document.getElementById("content");
+
+        // Türkçe'ye geçiş
+        turkishFlag.addEventListener("click", () => {
+            contentDiv.innerHTML = contentData.turkish;
+        });
+
+        // İngilizce'ye geçiş
+        englishFlag.addEventListener("click", () => {
+            contentDiv.innerHTML = contentData.english;
+        });
+    </script>
 </body>
 </html>
