--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <div class="container">
         <div class="language-selection">
-            <img src="turkish_flag.png" alt="Turkish" class="flag" id="turkishFlag">
-            <img src="english_flag.png" alt="English" class="flag" id="englishFlag">
+            <img src="https://cdn.pixabay.com/photo/2016/10/27/12/55/turkish-flag-1774834_960_720.png" alt="Turkish" class="flag" id="turkishFlag">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/12/03/flag-159070_1280.png" alt="English" class="flag" id="englishFlag">
         </div>
 
         <div id="content">
