--- a/index.html
+++ b/index.html
@@ -156,12 +156,11 @@
     </div>
 
     <script>
-        // Türkçe ve İngilizce içerikler
         const contentData = {
             english: `
                 <h1>Privacy Policy and Terms of Use</h1>
                 <h2>Privacy Policy</h2>
-                <<h3>1. Acceptance of Terms</h3>
+                <h3>1. Acceptance of Terms</h3>
     <p>By downloading and using this app, you agree to the terms outlined in this Privacy Policy. Please read carefully before continuing to use the app.</p>
     
     <h3>2. Data Collection</h3>
